==============================================================================
Changes for 1.71.0
==============================================================================

2014-03-29	Kevin Zheng
	* server/server.c: Fix emergency map.

2014-03-17	Kevin Zheng
	* devel/crossfire-config.c: Retire build parameter dumper.

2014-03-04	Kevin Zheng
	* configure.ac: Disable newspaper and logger plugin by default.
	* server/: Reduce unnecessary startup verbosity.
	* server/misc.c: Shorten log level messages.

2014-01-01	Nicolas Weeger
	* common/map.c: Ensure objects are on a valid map position.

2013-11-29	SilverNexus
	* server/attack.c: Added damage for when a player burns an equipped
	item (e.g. with flint and steel). Should help balance the utility of
	the flint and steel.

2013-11-10	SilverNexus
	Fix for bug #762: Permadeath segfault on dead character load.

	* socket/request.c: do not send dead characters' information to the client
	* include/account_char.h: add a flag for dead characters
	* server/player.c: add account name to dead player's slaying field
	* server/account_char.c: add handling for new flag for dead characters
	* server/resurrection.c: make resurrection reset the dead character
	flag on a successful resurrection

2013-09-07	Andreas Kirschbaum
	Properly track cast spells. Fixes infrequent server crashes due to 100%
	CPU load.

2013-07-18	Nicolas Weeger
	Fix for bug #755: Player 'freezes' after boarded wagon is destroyed
	server/attack.c: reset player's contr->transport to NULL.

2013-01-11	Karla Stenger
	* server/apply.c: Fixed wrong check for applied flag when closing
	container to open another one.

2012-11-27	Karla Stenger
	* common/item.c: Add "(glowing)" to rings and amulets' description.

2012-07-01	Nicolas Weeger
	Fix for bug #3536508: Broken firewall with missile swarm.

2012-06-26	MSW
	Modify handle_client() to process more than one socket command per tick.
	This chops about half a second off time spent in negotiate_connection()