@@ -1,3 +1,8 @@
+2014-04-06	Kevin Zheng
+	* server/init.c: Clean up and sort command-line arguments.
+	* server/move.c: Clean up "start to attack" message.
+	* server/server.c: Retire des_crypt(3) in favor of crypt(3).
+
 ==============================================================================
 Changes for 1.71.0
 ==============================================================================
